# attribute_finder

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Erkenntnisse Attribute Finder.docx  Makefile  README.md  api.py  config.py  containerapp.yaml  hello.py  install_local_packages.sh  muster.json  pyproject.toml  run.py  settings.env  ~$kenntnisse Attribute Finder.docx
config/: data.settings.env  ftp.settings.env  openai_credentials.example.env  pyproject.toml
config/src/config/: config.py
data/: Exp. Kategorie Attribute 18Dez24 LV.xlsx  Zuordnung_hpWG_zu_Klassifikation_Versand.xlsx
legacy/: run.py
legacy/assets/: attributes.json  attributes_config.py
legacy/config/: __init__.py  config.py  ftp.settings.env  response.settings.env
legacy/data_preprocessing/: __main__.py  data_loading.py  post_data.py
legacy/src/response/: __main__.py
services/: Makefile  manual_data_preprocessing.ipynb  settings.env  visualize_output.py
services/data_ingest/: Makefile  config.py  data_ingestion.py  manual_data_preprocessing.ipynb  settings.env
services/response/: Makefile  config.py  get_attribute.py  image_preprocessing.py  llm.py  preprocess_images.py  response.py  run.py  settings.env
src/: api.py  run.py
src/config/: __init__.py  config.py  data.settings.env  ftp.settings.example.env  openai_credentials.example.env  paths.py  response.settings.env
src/data_ingest/: __main__.py  data_ingestion.py
src/data_preprocessing/: ftp_data_loader.py
src/response/: __init__.py  __main__.py  get_attribute.py  instances.py  llm.py  preprocess_images.py
src/utils/: __main__.py  visualize_output.py
src/utils/data_preprocessing/: ftp_data_loader.py  ftp_data_post.py  json_article_loader.py
src/utils/helper/: cleanup_files.py
src/utils/response/: get_attribute.py  llm.py  preprocess_images.py  process_article.py
src/visualize/: __main__.py  visualize_output.py
tests/data_preprocessing/: test_ftp_data_loader.py
utils/data_preprocessing/: pyproject.toml
utils/data_preprocessing/src/data_preprocessing/: __init__.py  ftp_data_loader.py  ftp_data_post.py  json_article_loader.py
utils/helper/: pyproject.toml
utils/helper/src/helper/: __init__.py  cleanup_files.py  working_hours.py
utils/response/: pyproject.toml
utils/response/src/response/: __init__.py  get_attribute.py  llm.py  preprocess_images.py  process_article.py
