[project]
name = "attribut-finder-pim"
version = "0.1.0"
description = "A service which finds pre-specified attributes based on product images using LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "backoff>=2.2.1",
    "config",
    "data_preprocessing",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "openai>=1.60.2",
    "pandas>=2.2.3",
    "paramiko>=3.5.1",
    "polars>=1.20.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "response",
    "uvicorn>=0.34.2",
]

# Optional dependencies specific to each module
[project.optional-dependencies]
response = []
data_loading = []
utils = []

[tool.uv.workspace]
members = ["config", "utils/data_preprocessing", "utils/response"]

[tool.uv.sources]
config = { workspace = true }
response = { workspace = true }
data-preprocessing = { workspace = true }
